# interera8

./: Dockerfile  docker-compose.yaml  pyproject.toml
app/: app.py  conf.py  di.py
src/domain/: entity.py  exceptions.py
src/infrastructure/integrations/: gemini_service.py
src/presentation/http/rest/api/: exception_hanlder.py
src/presentation/http/rest/api/v1/: interera.py
src/presentation/http/rest/api/v1/schemas/: interera.py
