[project]
name = "interera8"
version = "0.1.0"
description = ""
authors = [
    {name = "dimash",email = "arystambekdimash005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "google-genai (>=1.60.0,<2.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "dependency-injector (>=4.48.3,<5.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
